# bazy_projekt

./: .gitignore  README.md  __init__.py  auth.py  compose.yaml  extensions.py  flash_msg.py  form.py  models.py  postgres_db.py  settings.py
backend/: '  Dockerfile  pyproject.toml  requirements.txt
backend/flaskr/: __init__.py  admin.py  auth.py  category_helpers.py  extensions.py  flash_msg.py  form.py  listing.py  models.py  postgres_db.py  reservations.py  settings.py
backend/flaskr/templates/: _formhelpers.html  base.html
backend/flaskr/templates/admin/: index.html
backend/flaskr/templates/auth/: login.html  register.html  settings.html
backend/flaskr/templates/listings/: filter.html  reservation.html
backend/flaskr/templates/reservations/: filter.html  reservations_list.html  reserve.html
db/: Dockerfile  backup.sh  create_user.sh  delete_pwd.sh  init.sql  restore_backup.sh
templates/: _formhelpers.html  base.html  view_ammunition.html  view_guns.html
templates/auth/: login.html  register.html  settings.html
