[project]
name = "projekt_bazy"
version = "0.0.1"
authors = [
  { name="Antoni Duda", email="antoni.duda@programmer.net" },
  { name="Jakub Bartczyński" }
]
description = "Projekt"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
exclude = ["tests/*"]
